# decs

./: CMakeLists.txt
include/: Archetype.hpp  ComponentArray.hpp  ComponentTypeId.hpp  Decs.hpp  DeferredExecutor.hpp  DeferredMutator.hpp  EntityBuilder.hpp  Query.hpp  System.hpp  SystemManager.hpp  Types.hpp  decs.hpp
include/decs/: Archetype.hpp  ComponentArray.hpp  ComponentTypeId.hpp  ConcurrentQueue.hpp  Decs.hpp  DeferredConstructor.hpp  EntityBuilder.hpp  System.hpp  SystemManager.hpp  Types.hpp
src/: Archetype.cpp  ComponentArray.cpp  ComponentTypeId.cpp  Decs.cpp  DeferredExecutor.cpp  EntityBuilder.cpp  Query.cpp  SystemManager.cpp  decs.cpp
